@@ -2,36 +2,36 @@ package com.example.repository;
 
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
-import org.springframework.data.redis.core.RedisTemplate;
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.data.redis.core.StringRedisTemplate;
 import org.springframework.stereotype.Component;
-
 import lombok.RequiredArgsConstructor;
 
 @Component
+@Slf4j
 @RequiredArgsConstructor
-public class RedisChatHistoryRepository implements HistoryRepository {
+public class RedisHistoryRepository implements HistoryRepository {
 
-    private final RedisTemplate<String, Object> redisTemplate;
-    private static final String HISTORY_KEY_PREFIX = "chat:history:";
-    private static final long DEFAULT_EXPIRATION_TIME = 24 * 60 * 60; // 24 hours
+    private final StringRedisTemplate redisTemplate;
+
+    private static final String CONVERSATION_RECORD_KEY_PREFIX = "conversation:record:";
 
     @Override
     public void insertHistoryIds(String type, String chatId) {
-        String key = HISTORY_KEY_PREFIX + type;
+        String key = CONVERSATION_RECORD_KEY_PREFIX + type;
         redisTemplate.opsForSet().add(key, chatId);
-        redisTemplate.expire(key, DEFAULT_EXPIRATION_TIME, java.util.concurrent.TimeUnit.SECONDS);
     }
 
     @Override
     public List<String> getAllHistoryIdsByType(String type) {
-        String key = HISTORY_KEY_PREFIX + type;
-        Set<Object> chatIds = redisTemplate.opsForSet().members(key);
+        String key = CONVERSATION_RECORD_KEY_PREFIX + type;
+        Set<String> chatIds = redisTemplate.opsForSet().members(key);
         return chatIds != null ?
                 chatIds.stream()
-                        .map(Object::toString)
-                        .collect(Collectors.toList()) :
+                        .sorted(String::compareTo)
+                        .toList() :
                 List.of();
     }
+
 }
